package com.example.demo2;

import org.springframework.data.repository.CrudRepository;


public interface ArchivRepository extends CrudRepository<Archiv, Integer> {

}